# Igloo

./: .gitignore  .gitmodules  README.md  foundry.toml  remappings.txt
rust_clients/: Cargo.toml
rust_clients/abi/: IIgloo.json
rust_clients/src/: ceremony.rs  contract.rs  main.rs  utils.rs
script/: ProxyScript.s.sol
src/: IIgloo.sol  Igloo.sol  IglooProxy.sol  IglooProxyFactory.sol
test/: TestIIgloo.t.sol
